Try to fix weird bug with portfolio page on mobile

--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -231,7 +231,7 @@
 
 .nextpage-container {
     cursor: pointer;
-    z-index: 5556;
+    z-index: 5555;
     transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
