--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -42,21 +42,14 @@
 }
 
 .portfolio-item {
-    display: flex;
+    display: block;
     background-size: cover;
     background-position: top;
-    height: 30em;
+    height: 60vh;
     min-width: 10em;
     width: calc(100% / 4);
     margin: 0.5em;
-    transition: all 0.25s ease;
     filter: saturate(0);
-}
-
-.portfolio-item-img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
 }
 
 .item-overlay {
